--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-5 bg-zinc-100 opacity-95 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-5 bg-white opacity-90 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#memorandom"
-                                    class="text-base text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
+                                    class="text-base font-semibold text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
                                 <a href="#portofolio"
-                                    class="text-base text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Portofolio</a>
+                                    class="text-base font-semibold text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Portofolio</a>
                             </li>
                             
                         </ul>
@@ -51,9 +51,9 @@
                     <img src="dist/img/satu.svg" alt="gambar" class="w-full lg:w-72 my-auto mx-auto lg:mx-0 lg:pt-8" />
                     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                 </div>
-                <div class="w-full pt-10 leading-relaxed lg:my-auto lg:w-2/3 lg:pl-10 lg:text-justify ">
-                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Bangun</h1>
-                    <p class=" text-sec text-base mb-4 lg:text-lg ">Memulai dan mencoba hal baru adalah
+                <div class="w-full pt-10 lg:my-auto lg:w-2/3 lg:pl-10 lg:text-justify ">
+                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl font">Mukadimmah</h1>
+                    <p class=" text-sec text-base mb-4 leading-relaxed lg:text-lg ">Memulai dan mencoba hal baru adalah
                         pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot. Sayang, umurnya tidak
                         panjang. Harus kuakui itu akibat ulahku. Aku lupa jika menulis perlahan menghabisinya. Setelah
                         dipikir-pikir, membeli bulpen merk lain bukanlah opsi yang bagus. Pasti nasibnya akan berakhir seperti pilot. Lebih baik aku bangun tempat
