--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-5 bg-white opacity-90 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-5 bg-white opacity-95 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#memorandom"
-                                    class="text-base font-semibold text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
+                                    class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
                                 <a href="#portofolio"
-                                    class="text-base font-semibold text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Portofolio</a>
+                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Portofolio</a>
                             </li>
                             
                         </ul>
