--- a/index.html
+++ b/index.html
@@ -111,52 +111,71 @@
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-3/5">
                     <h1 class="text-3xl text-prim block font-bold mb-2 lg:invisible">#Portofolio</h1>
-                    <div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark relative lg:pr-5"
-                        data-bs-ride="carousel">
-                        <!-- Indicators -->
-                        <div class="carousel-indicators absolute right-0 bottom-0 left-0 flex justify-center p-0 mb-2">
-                            <button data-bs-target="#carouselDarkVariant" data-bs-slide-to="0" class="active"
-                                aria-current="true" aria-label="Slide 1"></button>
-                            <button data-bs-target="#carouselDarkVariant" data-bs-slide-to="1"
-                                aria-label="Slide 1"></button>
-                            <button data-bs-target="#carouselDarkVariant" data-bs-slide-to="2"
-                                aria-label="Slide 1"></button>
+                    <div id="carouselExampleIndicators" class="carousel slide relative" data-bs-ride="carousel">
+                        <div class="carousel-indicators absolute right-0 bottom-0 left-0 flex justify-center p-0 mb-4">
+                          <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="0"
+                            class="active"
+                            aria-current="true"
+                            aria-label="Slide 1"
+                          ></button>
+                          <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="1"
+                            aria-label="Slide 2"
+                          ></button>
+                          <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="2"
+                            aria-label="Slide 3"
+                          ></button>
                         </div>
-
-                        <!-- Inner -->
-                        <div class="carousel-fade relative w-full overflow-hidden sk">
-                            <!-- Single item -->
-                            <div class="carousel-item active relative float-left w-full">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(19).webp"
-                                    class="block w-full rounded-md" alt="Motorbike Smoke" />
-                                <!-- <div class="carousel-caption hidden md:block absolute text-center">
-                                    <h5 class="text-xl">First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
-                                </div> -->
-                            </div>
-
-                            <!-- Single item -->
-                            <div class="carousel-item relative float-left w-full">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(35).webp"
-                                    class="block w-full rounded-md" alt="Mountaintop" />
-                                <!-- <div class="carousel-caption hidden md:block absolute text-center">
-                                    <h5 class="text-xl">Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
-                                </div> -->
-                            </div>
-
-                            <!-- Single item -->
-                            <div class="carousel-item relative float-left w-full">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(40).webp"
-                                    class="block w-full rounded-md" alt="Woman Reading a Book" />
-                                <!-- <div class="carousel-caption md:block absolute text-center">
-                                    <h5 class="text-xl">Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
-                                </div> -->
-                            </div>
+                        <div class="carousel-inner relative w-full overflow-hidden">
+                          <div class="carousel-item active float-left w-full">
+                            <img
+                              src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp"
+                              class="block w-full"
+                              alt="Wild Landscape"
+                            />
+                          </div>
+                          <div class="carousel-item float-left w-full">
+                            <img
+                              src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp"
+                              class="block w-full"
+                              alt="Camera"
+                            />
+                          </div>
+                          <div class="carousel-item float-left w-full">
+                            <img
+                              src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp"
+                              class="block w-full"
+                              alt="Exotic Fruits"
+                            />
+                          </div>
                         </div>
-                        <!-- Inner -->
-                    </div>
+                        <button
+                          class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0"
+                          type="button"
+                          data-bs-target="#carouselExampleIndicators"
+                          data-bs-slide="prev"
+                        >
+                          <span class="carousel-control-prev-icon inline-block bg-no-repeat" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button
+                          class="carousel-control-next absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline right-0"
+                          type="button"
+                          data-bs-target="#carouselExampleIndicators"
+                          data-bs-slide="next"
+                        >
+                          <span class="carousel-control-next-icon inline-block bg-no-repeat" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
                 <div class="w-full my-auto lg:pl-5 lg:w-2/5">
                     <div>
@@ -206,7 +225,7 @@
                             </div>
                         </button>
                     </div>
-                    <div class="alert bg-amber-200 rounded-full px-8 py-1 text-base font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
+                    <div class="alert bg-amber-200 rounded-full px-8 py-3 lg:py-1 text-base font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
                         role="alert">
                         Terimakasih sudah berkomentar dan membuang waktu ke tempat ini
                         <button type="button"
@@ -261,7 +280,7 @@
     </footer>
 
     <script src="dist/js/script.js"></script>
-    <script src="/node_modules/tw-elements/dist/js/index.min.js"></script>
+    <script src="node_modules/tw-elements/dist/js/index.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwMisJ72YmKCMw9SVdnWsB5s9rXC5U_6m6dD9p7ke1gF2kaosSXJ7Ax88c9xJHoA6JIAg/exec'
         const form = document.forms['komentar'];
@@ -279,7 +298,7 @@
         });
         
         silang.addEventListener('click', function () {
-            alert.classList.toggle('hidden');
+            alert.classList.toggle('invisible');
         });
 
         form.addEventListener('submit', e => {
