--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
-                    <img src="dist/img/satu.svg" alt="gambar" class="w-full lg:w-72 my-auto mx-auto lg:mx-0 lg:pt-8" />
-                    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+                    <img src="dist/img/satu.svg" alt="gambar" class="w-full my-auto mx-auto lg:w-80 lg:mx-0"/>
                 </div>
-                <div class="w-full pt-10 lg:my-auto lg:w-2/3 lg:pl-10 lg:text-justify ">
-                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl font">Mukadimmah</h1>
-                    <p class=" text-sec text-base mb-4 leading-relaxed lg:text-lg ">Memulai dan mencoba hal baru adalah
+                <div class="w-full pt-12 lg:pt-0 lg:my-auto lg:w-2/3 lg:pl-16 lg:text-justify ">
+                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
+                    <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Memulai dan mencoba hal baru adalah
                         pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot. Sayang, umurnya
                         tidak
                         panjang. Harus kuakui itu akibat ulahku. Aku lupa jika menulis perlahan menghabisinya. Setelah
@@ -65,7 +64,7 @@
                         sedang kucari
                         saat ini. Sudah, selamat berkunjung, tinggalkan komentar jika mau, semoga harimu menyenangkan.
                     </p>
-                    <p class="text-base text-right font-bold lg:text-lg">Salam.</p>
+                    <p class="text-base font-semibold text-right lg:text-lg ">Salam.</p>
                 </div>
             </div>
         </div>
@@ -73,12 +72,12 @@
     <!--Main End -->
 
     <!-- Memorandom-->
-    <section id="memorandom" class="pt-36 lg:pt-48 pb-16 bg-gradient-to-t from-zinc-50">
+    <section id="memorandom" class="pt-36 pb-16 bg-gradient-to-t from-zinc-50">
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
-                <div class="w-full mb-4 lg:w-1/2">
+                <div class="w-full lg:w-1/2">
                     <h1 class="text-prim block font-bold text-3xl mb-1 lg:text-4xl">#Memorandom</h1>
-                    <p class="text-sec text-base leading-relaxed mb-4 lg:text-lg lg:text-justify">Tulisan yang menarik,
+                    <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan yang menarik,
                         inspiratif, dan
                         lucu tentunya ada di blog lain, bukan disini. Disini hanya gudang ketikan anak kemarin sore.
                         Semua tulisan dibuat dengan rasa gelisah walaupun nyatanya sedang gembira. Tiap tulisan
@@ -86,8 +85,8 @@
                         terlalu serius, aturan penulisan tak berlaku disini, ingat, ini Memorandom, bukan Memorandum.
                     </p>
                 </div>
-                <div class="w-full pt-4 lg:w-1/2 lg:pl-28">
-                    <h1 class="text-lg font-semibold mb-3.5 pt-3">Baca Memorandom terbaru:</h1>
+                <div class="w-full lg:w-1/2 lg:pl-20">
+                    <h1 class="text-lg font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
                     <li
                         class="list-disc text-lg underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                         Berbahasa
@@ -106,11 +105,11 @@
     <!-- End -->
 
     <!-- Portofolio -->
-    <section id="portofolio" class="pt-36 lg:pt-40 pb-16 bg-gradient-to-b from-zinc-50 ">
+    <section id="portofolio" class="pt-36 pb-16 bg-gradient-to-b from-zinc-50 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
-                <div class=" w-full lg:w-3/5">
-                    <h1 class="text-3xl text-prim block font-bold mb-2 lg:invisible">#Portofolio</h1>
+                <div class=" w-full lg:w-3/5 lg:pr-20">
+                    <h1 class="text-3xl text-prim block font-bold mb-3 lg:invisible">#Portofolio</h1>
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
@@ -123,8 +122,8 @@
                             <div class="slide">
                             <img src="dist/img/2.JPG" alt="">
                             <div class="info">
-                               <h2>Slide 02</h2>
-                               <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+                            <!-- <h2>Slide 02</h2> 
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                             </div>
                             </div>
                             <div class="slide">
@@ -150,11 +149,11 @@
                          </div>
                     </div>
                 </div>
-                <div class="w-full my-auto lg:pl-5 lg:w-2/5">
+                <div class="w-full my-auto lg:w-2/5">
                     <div>
-                        <h2 class="text-prim text-xs lg:block lg:font-bold lg:text-4xl lg:mb-2 invisible lg:visible">
+                        <h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible">
                             #Portofolio</h2>
-                        <p class="text-sec text-base leading-relaxed -my-2 lg:-my-1 lg:text-lg lg:text-justify ">Lorem
+                        <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify ">Lorem
                             ipsum dolor sit amet consectetur adipisicing elit. Magni rem similique ab maxime nesciunt
                             quas nobis commodi mollitia excepturi amet incidunt quaerat vitae est, dolore eum odio.
                             Vitae dolores atque soluta! Velit dicta, dolores architecto odit aliquid harum doloribus!
@@ -168,7 +167,7 @@
     <!-- End -->
 
     <!-- Komentar -->
-    <section id="komentar" class="pt-40 pb-36 bg-gradient-to-t from-zinc-50">
+    <section id="komentar" class="pt-36 pb-16 bg-gradient-to-t from-zinc-50">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="max-w-xl mx-auto mb-8">
