--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                         class="hidden absolute py-5 bg-white opacity-95 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="/memo.html"
+                                <a href="memorandom.html"
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
-                                <a href="#portofolio"
-                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Portofolio</a>
+                                <a href="#submisi"
+                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                             </li>
 
                         </ul>
@@ -104,12 +104,12 @@
     </section>
     <!-- End -->
 
-    <!-- Portofolio -->
-    <section id="portofolio" class="pt-36 pb-16 bg-gradient-to-b from-zinc-50 ">
+    <!--Submisi -->
+    <section id="submisi" class="pt-36 pb-16 bg-gradient-to-b from-zinc-50 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-3/5 lg:pr-20">
-                    <h1 class="text-3xl text-prim block font-bold mb-3 lg:invisible">#Portofolio</h1>
+                    <h1 class="text-3xl text-prim block font-bold mb-3 lg:invisible">#Submisi</h1>
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
@@ -152,13 +152,13 @@
                 <div class="w-full my-auto lg:w-2/5">
                     <div>
                         <h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible">
-                            #Portofolio</h2>
+                            #Submisi</h2>
                         <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify ">Lorem
                             ipsum dolor sit amet consectetur adipisicing elit. Magni rem similique ab maxime nesciunt
                             quas nobis commodi mollitia excepturi amet incidunt quaerat vitae est, dolore eum odio.
                             Vitae dolores atque soluta! Velit dicta, dolores architecto odit aliquid harum doloribus!
                             Cumque, quibusdam. Vel exercitationem dolorum magnam, excepturi asperiores aliquid veritatis
-                            praesentium. </p>
+                            praesentium.</p>
                     </div>
                 </div>
             </div>
