--- a/memorandom.html
+++ b/memorandom.html
@@ -25,7 +25,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-5 bg-white opacity-95 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-white opacity-95 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="memorandom.html"
@@ -43,7 +43,7 @@
     </header>
     <!--End Header-->
 
-    <div class="min-h-screen flex justify-center items-center bg-sea1 bg-fixed bg-no-repeat bg-cover bg-center">
+    <div class="min-h-screen flex justify-center items-center bg-sea2 bg-fixed bg-no-repeat bg-cover bg-center">
         <h1 class="font-extrabold text-4xl lg:text-7xl ">Memorandom</h1>
      </div>
     
