--- a/memorandom.html
+++ b/memorandom.html
@@ -43,9 +43,12 @@
     </header>
     <!--End Header-->
 
-    <div class="min-h-screen flex justify-center items-center bg-sea1 bg-fixed bg-no-repeat bg-cover bg-center">
+    <!-- <div class="min-h-screen flex justify-center items-center bg-sea1 bg-fixed bg-no-repeat bg-cover bg-center">
         <h1 class="font-extrabold text-4xl lg:text-7xl ">Memorandom</h1>
-     </div>
+     </div> -->
+
+    <div class="w-full h-screen bg-no-repeat bg-cover bg-fixed bg-sea1">
+    </div>
     
     <div class="pt-8 pb-16">
         <div class="container mx-auto px-7 lg:px-32 ">
