--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-3 bg-white opacity-95 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="memorandom.html"
