--- a/memorandom.html
+++ b/memorandom.html
@@ -12,7 +12,7 @@
 <body>
     <div class="flex flex-col min-h-screen">
     <!--Header-->
-    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
+    <header class="bg-white bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
@@ -25,7 +25,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-3 bg-white opacity-95 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="memorandom.html"
@@ -47,7 +47,7 @@
         <h1 class="font-extrabold text-4xl lg:text-7xl ">Memorandom</h1>
      </div> -->
 
-    <div class="w-full h-screen bg-no-repeat bg-cover bg-fixed bg-sea1">
+    <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea3 "><h1 class="py-auto text-center mt-48 text-4xl">Memorandom</h1>
     </div>
     
     <div class="pt-8 pb-16">
