--- a/memorandom.html
+++ b/memorandom.html
@@ -12,7 +12,7 @@
 <body>
     <div class="flex flex-col min-h-screen">
     <!--Header-->
-    <header class="bg-white bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
+    <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
@@ -47,10 +47,10 @@
         <h1 class="font-extrabold text-4xl lg:text-7xl ">Memorandom</h1>
      </div> -->
 
-    <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea3 "><h1 class="py-auto text-center mt-48 text-4xl">Memorandom</h1>
+    <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1 lg:bg-sea2"><h1 class="py-auto text-center mt-48 text-4xl lg:text-6xl ">Memorandom</h1>
     </div>
     
-    <div class="pt-8 pb-16">
+    <div class="pt-8 pb-16 bg-gradient-to-t from-zinc-50">
         <div class="container mx-auto px-7 lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
