--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <!-- End -->
 
-    <!--Submisi -->
+    <!--Supmisi -->
     <section id="submisi" class="pt-36 pb-16 bg-gradient-to-b from-zinc-50 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
@@ -120,29 +120,13 @@
                             </div>
                             </div>
                             <div class="slide">
-                            <img src="dist/img/2.JPG" alt="">
-                            <div class="info">
-                            <!-- <h2>Slide 02</h2> 
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                            </div>
+                            <img src="dist/img/tiga.png" alt="">
                             </div>
                             <div class="slide">
-                            <img src="dist/img/3.JPG" alt="">
-                            <div class="info">
-                               <!-- <h2>Slide 03</h2>
-                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                            </div>
-                            </div>
-                            <div class="slide">
-                            <img src="dist/img/4.JPG" alt="">
-                            <div class="info">
-                               <!-- <h2>Slide 04</h2>
-                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                            </div>
+                            <img src="dist/img/tiga.png" alt="">
                             </div>
                             <div class="navigation">
                             <div class="btn active"></div>
-                            <div class="btn"></div>
                             <div class="btn"></div>
                             <div class="btn"></div>
                             </div>
@@ -153,7 +137,7 @@
                     <div>
                         <h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible">
                             #Submisi</h2>
-                        <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify ">Lorem
+                        <p class="text-sec mt-2 lg:mt-0 text-base leading-relaxed lg:text-lg lg:text-justify ">Lorem
                             ipsum dolor sit amet consectetur adipisicing elit. Magni rem similique ab maxime nesciunt
                             quas nobis commodi mollitia excepturi amet incidunt quaerat vitae est, dolore eum odio.
                             Vitae dolores atque soluta! Velit dicta, dolores architecto odit aliquid harum doloribus!
