--- a/memorandom.html
+++ b/memorandom.html
@@ -43,11 +43,8 @@
     </header>
     <!--End Header-->
 
-    <!-- <div class="min-h-screen flex justify-center items-center bg-sea1 bg-fixed bg-no-repeat bg-cover bg-center">
-        <h1 class="font-extrabold text-4xl lg:text-7xl ">Memorandom</h1>
-     </div> -->
 
-    <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1 lg:bg-sea2"><h1 class="py-auto text-center mt-48 text-4xl lg:text-6xl ">Memorandom</h1>
+    <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1"><h1 class=" text-center mt-44 text-4xl font-bold text-prim lg:text-6xl ">Memorandom</h1>
     </div>
     
     <div class="pt-8 pb-16 bg-gradient-to-t from-zinc-50">
@@ -56,17 +53,11 @@
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                     <img src="/dist/img/1.JPG" class="rounded shadow-md" alt="">
                     <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
-                    <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span class="bg-amber-200 px-2 rounded-full">4 min read</span></p>
+                    <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span class="bg-amber-200 px-2 py-1 rounded-full">4 min read</span></p>
                 </div>
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
-                    <img src="/dist/img/2.JPG" class="rounded shadow-md" alt="">
-                    <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
-                    <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span class="bg-amber-200 px-2 rounded-full">4 min read</span></p>
-                </div>
-                <div class="w-full mb-10 lg:px-4 lg:w-1/3">
-                    <img src="/dist/img/3.JPG" class="rounded shadow-md" alt="">
-                    <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
-                    <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span class="bg-amber-200 px-2 rounded-full">4 min read</span></p>
+                    <img src="/dist/img/tiga.png" class="rounded shadow-md" alt="">
+
                 </div>
             </div>
             
