--- a/dec.html
+++ b/dec.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/decout.css">
 </head>
 <body>
-    
+    <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
+        <div class="container mx-auto">
+            <div class="flex items-center justify-between relative">
+                <div class="px-7 lg:px-32">
+                    <a href="index.html" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                </div>
+                <div class="flex items-center px-7 lg:px-32">
+                    <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-top-right"></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out"></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
+                    </button>
+                    <nav id="nav-menu"
+                        class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        <ul class="block lg:flex">
+                            <li class="group">
+                                <a href="memorandom.html"
+                                    class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
+                            </li>
+                            <li class="group">
+                                <a href="index.html#submisi"
+                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="pt-24 pb-16 bg-gradient-to-t from-zinc-50">
+        <div class="container mx-auto px-7 lg:px-72 ">
+            <h1 class=" text-3xl font-bold lg:text-4xl">Jauh di Luar Dinding Maria</h1>
+            <h4 class=" text-sm mt-2 lg:mt-4 ">December 22, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">4 Min read</span></h4>
+            <p class="mt-6 leading-relaxed">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam sapiente quasi, veniam totam dignissimos architecto tempora placeat culpa modi sit maiores repellendus tempore incidunt cupiditate!</p>
+            <img src="dist/img/gt.svg" alt="">
+            <p class="mt-3 leading-relaxed">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam sapiente quasi, veniam totam dignissimos architecto tempora placeat culpa modi sit maiores repellendus tempore incidunt cupiditate!</p>
+        </div>
+    </div>  
+    <script src="dist/js/script.js"></script>
 </body>
 </html>
