--- a/memorandom.html
+++ b/memorandom.html
@@ -47,10 +47,12 @@
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
+                        <a href="dec.html">
                         <img src="/dist/img/1.JPG" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
                         <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span
                                 class="bg-amber-200 px-2 py-1 rounded-full">4 min read</span></p>
+                        </a>
                     </div>
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                         <img src="/dist/img/tiga.png" class="rounded shadow-md" alt="">
