--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <section id="home" class="pt-28 pb-16 bg-neutral-100">
+    <section id="home" class="pt-28 pb-16 bg-red-100">
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section id="submisi" class="pt-36 pb-16 bg-zinc-100 ">
+    <section id="submisi" class="pt-36 pb-16 bg-zinc-50 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
