--- a/memorandom.html
+++ b/memorandom.html
@@ -40,10 +40,12 @@
                 </div>
             </div>
         </header>
+
         <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1">
             <h1 class=" text-center mt-44 text-4xl font-bold text-prim lg:text-6xl ">Memorandom</h1>
         </div>
-        <div class="pt-8 pb-16 bg-gradient-to-t from-zinc-50">
+
+        <div class="pt-8 pb-16 bg-zinc-50">
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
@@ -60,6 +62,7 @@
                 </div>
             </div>
         </div>
+        
         <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
             <div class="container mx-auto ">
                 <div class="flex justify-center">
