--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
         </div>
     </header>
 
-    <section id="home" class="pt-28 pb-16 bg-red-100">
+    <section id="home" class="pt-28 pb-16 bg-zinc-50">
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
-                    <img src="dist/img/satu.svg" alt="gambar" class="w-full my-auto mx-auto lg:w-11/12 lg:mx-0" />
+                    <img src="dist/img/satu.svg" alt="gambar" class="satu w-full my-auto mx-auto lg:w-11/12 lg:mx-0" />
+                    <img src="dist/img/profil.svg" alt="gambar" class="satus w-full my-auto mx-auto lg:w-11/12 lg:mx-0 hidden" />
                 </div>
                 <div class="w-full pt-12 lg:pt-0 lg:my-auto lg:w-2/3 lg:pl-16 lg:text-justify ">
-                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Bohong</h1>
+                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
                     <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Mulai dan coba hal baru adalah
                         pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot. Sayang, umurnya
                         tidak panjang. Harus kuakui itu akibat ulahku. Aku lupa kalau menulis termasuk tindakan yang
@@ -56,19 +57,18 @@
                         cocok untuk mengeluarkan isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun
                         itu. Siapapun akan bisa mengunjungi tempat ini, walaupun sebenarnya aku kurang suka. Tapi apa
                         boleh buat, mendadak aku suka pedas. Komentar pedas sedang kucari. Baiklah, berhubung sudah baca
-                        sampai sini, aku ucapkan selamat berkunjung, terimakasih, semoga harimu menyenangkan.
+                        sampai sini, aku ucapkan selamat berkunjung, terimakasih, semoga harimu menyenangkan. Salam.
                     </p>
-                    <p class="text-base font-semibold text-right lg:text-lg ">Salam.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="memorandom" class="pt-36 pb-16 bg-zinc-50">
+    <section id="memorandom" class="pt-36 pb-16 bg-neutral-200">
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
-                    <h1 class="text-prim block font-bold text-3xl mb-1 lg:text-4xl">#Memorandom</h1>
+                    <a href="memorandom.html"><h1 class="text-prim block font-bold text-3xl mb-1 lg:text-4xl  underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">Memorandom</h1></a>
                     <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan berbobot,
                         inspiratif, dan
                         lucu tentunya ada di blog lain, bukan disini. Disini hanya gudang ketikan anak kemarin sore.
@@ -79,34 +79,34 @@
                     </p>
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
-                    <h1 class="text-lg font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
+                    <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
+                    <a href="dec.html">
+                        <li class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                            Berbahasa yang jujur</li>
+                    </a>
                     <li
-                        class="list-disc text-lg underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                        Berbahasa
-                        yang jujur</li>
-                    <li
-                        class="list-disc text-lg underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                        class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                         Soon..</li>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="submisi" class="pt-36 pb-16 bg-zinc-50 ">
+    <section id="submisi" class="pt-36 pb-16 bg-neutral-200 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
-                    <h1 class="text-3xl text-prim block font-bold mb-4 lg:invisible">#Submisi</h1>
+                    <a href="https://www.instagram.com/submisiroom/" target="_blank"><h1 class="text-3xl text-prim block font-bold mb-4 lg:invisible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">Submisi</h1></a>
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
-                                <img src="dist/img/profil.png" alt="">
+                                <a href=""><img src="dist/img/profil.png" alt=""></a>
                             </div>
                             <div class="slide">
-                                <img src="dist/img/profil.png" alt="">
+                                <a href="#"><img src="dist/img/submisisoon.svg" alt=""></a>
                             </div>
                             <div class="slide">
-                                <img src="dist/img/profil.png" alt="">
+                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisiig.svg" alt=""></a>
                             </div>
                             <div class="navigation">
                                 <div class="btn active"></div>
@@ -118,8 +118,8 @@
                 </div>
                 <div class="w-full my-auto lg:w-3/5 lg:pl-20 ">
                     <div>
-                        <h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible">
-                            #Submisi</h2>
+                        <a href="https://www.instagram.com/submisiroom/" target="_blank"><h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
+                            Submisi</h2></a>
                         <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Lorem ipsum
                             dolor sit amet consectetur adipisicing elit. Quo dolor deserunt delectus dicta magnam?
                             Explicabo nisi asperiores exercitationem placeat alias dignissimos facere doloremque illo
@@ -130,7 +130,7 @@
         </div>
     </section>
 
-    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-zinc-50">
+    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-200">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="max-w-xl mx-auto mb-8">
@@ -142,17 +142,17 @@
                 <div class="w-full lg:w-2/3 mx-auto">
                     <div class="w-full mb-8">
                         <input type="text" id="name" placeholder="Nama/Anonim" name="nama"
-                            class="w-full bg-neutral-200 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
+                            class="w-full bg-zinc-50 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
                     </div>
                     <div class="w-full mb-8">
                         <textarea type="text" id="pesan" placeholder="Isi terserah" name="komentar"
-                            class="w-full bg-neutral-200 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
+                            class="w-full bg-zinc-50 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
                     </div>
                     <div class="w-full">
                         <button type="submit"
-                            class="kirim text-base font-bold bg-neutral-200 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 mb-3 text-sec">Kirim</button>
+                            class="kirim text-base font-bold bg-zinc-50 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 mb-3 text-sec">Kirim</button>
                         <button type="button"
-                            class="loading font-bold bg-neutral-200 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 invisible ">
+                            class="loading font-bold bg-zinc-50 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 invisible ">
                             <div class="flex justify-center items-center">
                                 <div class="spinner-border animate-spin inline-block w-6 h-6 border-4 rounded-full"
                                     role="status">
@@ -160,10 +160,10 @@
                             </div>
                         </button>
                     </div>
-                    <div class="alert bg-amber-200 rounded-full px-8 py-3 lg:py-1 text-base font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
+                    <div class="alert bg-zinc-50 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
                         role="alert">
                         Terimakasih sudah berkomentar dan membuang waktu ke tempat ini
-                        <button type="button" class="silang text-4xl ml-auto text-yellow-900 opacity-50 mb-2">×
+                        <button type="button" class="silang text-4xl ml-auto text-sec mb-2">×
                         </button>
                     </div>
             </form>
@@ -246,6 +246,21 @@
                     })
                     .catch(error => console.error('Error!', error.message))
             })
+        </script>
+        <script>
+            const first = document.querySelector('.satu');
+            const second = document.querySelector('.satus');
+            
+            first.addEventListener('click', function() {
+                first.classList.toggle('hidden');
+                second.classList.toggle('hidden');
+            })
+
+            second.addEventListener('click', function() {
+                first.classList.toggle('hidden');
+                second.classList.toggle('hidden');
+            })
+
         </script>
         <script type="text/javascript">
             var slides = document.querySelectorAll('.slide');
