--- a/memorandom.html
+++ b/memorandom.html
@@ -52,17 +52,17 @@
                         <a href="dec.html">
                         <img src="/dist/img/1.JPG" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
-                        <p class="text-center mt-3 text-xs font-medium">December 21, 2022 <span
-                                class="bg-amber-200 px-2 py-1 rounded-full">4 min read</span></p>
+                        <p class="text-center mt-2 text-sm ">December 21, 2022 <span
+                                class="bg-amber-200 px-2 ml-1 rounded-full">4 min read</span></p>
                         </a>
                     </div>
-                    <div class="w-full mb-10 lg:px-4 lg:w-1/3">
+                    <div class="w-full mb-10 lg:px-4 lg:w-1/3" >
                         <img src="/dist/img/tiga.png" class="rounded shadow-md" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        
+
         <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
             <div class="container mx-auto ">
                 <div class="flex justify-center">
@@ -92,7 +92,7 @@
                                 d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
                         </svg>
                     </a>
-                    <a href="https://www.youtube.com/azkannawal/" target="_blank" class="text-zinc-50">
+                    <a href="https://www.youtube.com/@azkannawal/" target="_blank" class="text-zinc-50">
                         <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <title>YouTube</title>
